<resources>
    <string name="app_name">东耀视频会议</string>
    <string name="app_versionname">0.0.1</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">打开导航</string>
    <string name="navigation_drawer_close">关闭导航</string>
    <string name="nav_header_title">视频会议系统</string>
    <string name="nav_header_subtitle">珠海市东耀企业有限公司</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mtmain">MTMainActivity</string>

    <string name="nav_title_calling">拨打电话</string>
    <string name="nav_title_meeting">视频会议</string>
    <string name="nav_title_videotape">录像管理</string>
    <string name="nav_title_settings">设置</string>
    <string name="nav_title_makingcalls">Make Call</string>

    <string name="nav_title_share">分享</string>
    <string name="nav_title_logout">退出登录</string>

    <string name="config_prohibited_phone_number_regexp"></string>

    <string name="f_btn_show">这是按钮</string>
    <string name="btn_str_clickme">点我试试</string>

    <string name="txt_btn_testlogin">测试登录</string>
    <string name="txt_btn_testreportstate">测试报告话机状态</string>
    <string name="txt_btn_testperview">测试打开视频通话</string>
    <string name="txt_btn_testeopencamare">测试打开摄像头</string>
    <string name="txt_btn_testencoder">测试预览并编码</string>
    <string name="txt_btn_testdecoder">测试打开解码</string>

    <string name="txt_lab_login">登录名</string>
    <string name="txt_lab_password">密 码</string>

    <string name="lb_auto_login">自动登录</string>
    <string name="lb_remember_password">记住密码</string>

    <string name="txt_login_id">登陆名</string>
    <string name="txt_login_password">密 码</string>
    <string name="txt_login_telnumber">电话号码</string>

    <string name="txt_login_auth_alert">为了更好的使用,请点击此处手动设置权限</string>

    <string name="txt_btn_login">登陆</string>
    <string name="title_dialerheader">可视电话</string>
    <string name="accessibility_description">请点击右上角「开关」按钮 ➚ ➚ ➚\r\n开启后，东耀服务电将自动完成以下服务设置：\n\n 1.东耀会议系统的必要权限\r\n 2.系统级来电唤醒守护\r\n 3.来电界面安全性\r\n 4.其他服务 \n\n 会议系统完整功能必须保证自动服务设置完成！会议系统被强制关闭时可能导致自动服务设置失效。若出现该情况，可以尝试先关闭再重试开启该服务。\n\n 该服务无需获取手机Root权限，支持Android4.1以上系统。\n\n 使用中遇到的问题，可联系官方人员群帮助解决！</string>
    <string name="accessibility_service_label">东耀视频会议系统</string>

</resources>
