<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calling"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_title_calling" />
        <item
            android:id="@+id/nav_meeting"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_title_meeting" />
        <item
            android:id="@+id/nav_videotapeManage"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_title_videotape" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_title_settings" />
    </group>

    <item android:title="个人">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_title_share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_title_logout" />
        </menu>
    </item>

</menu>
