<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dy.dwvm_mt.DY_LoginActivity"><!---->

    <ImageView
        android:id="@+id/login_avatar"
        android:layout_width="98dp"
        android:layout_height="97dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        app:srcCompat="@drawable/ic_account_circle_black_24dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_account"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="80dp">

        <EditText
            android:id="@+id/txt_login_id"
            android:layout_width="320dp"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/login_Edit_Text"
            android:hint="@string/txt_login_id"
            android:paddingLeft="10dp"
            android:text="L_MT5" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="74dp">

        <EditText
            android:id="@+id/txt_login_password"
            android:layout_width="320dp"
            android:inputType="textPassword"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/login_Edit_Text"
            android:hint="@string/txt_login_password"
            android:paddingLeft="10dp"
            android:text="123" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20pt"
        android:layout_marginTop="10dp">

        <CheckBox
            android:id="@+id/login_rememberpassword"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:text="@string/lb_remember_password" />

        <CheckBox
            android:id="@+id/login_autologin"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/lb_auto_login" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape"
        android:text="@string/txt_btn_login"
        android:textColor="@color/login_text"
        android:textSize="20dp" />
</LinearLayout>